<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TooDoo</string>
    <string name="my_tasks">My tasks</string>
    <string name="add_task">Add task</string>
    <string name="show_completed_tasks">Show completed tasks</string>
    <string name="show_task_info">Show task information</string>
    <string name="task_edit_description_hint">Things to do…</string>
    <string name="priority">Priority</string>
    <string name="complete_until">Complete until</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="priority_high">!! High</string>
    <string name="priority_low">Low</string>
    <string name="priority_none">None</string>
    <string name="datepicker_title">Pick date</string>
    <string name="timepicker_title">Pick time</string>
    <string name="undo">Undo</string>
    <string name="task_deletion_dialog_title">Delete the task?</string>
    <string name="cancel">Cancel</string>

    <!-- Notifications !-->
    <string name="daily_tasks_notification_channel_title">Morning notification of oncoming tasks</string>
    <string name="daily_tasks_notification_title">Daily tasks</string>

    <string name="task_sync_notification_channel_title">Notification of synchronization with server</string>
    <string name="task_sync_notification_title">Syncing tasks with server…</string>

    <plurals name="completed_task_count">
        <item quantity="one">%d task completed</item>
        <item quantity="other">%d tasks completed</item>
    </plurals>

    <plurals name="deleted_task_count">
        <item quantity="one">%d task deleted</item>
        <item quantity="other">%d tasks deleted</item>
    </plurals>

    <plurals name="dont_forget_to_complete_tasks">
        <item quantity="one">You have %d task for today, don`t forget!</item>
        <item quantity="other">You have %d tasks for today, don`t forget!</item>
    </plurals>


    <string-array name="task_priorities">
        <item>@string/priority_none</item>
        <item>@string/priority_low</item>
        <item>@string/priority_high</item>
    </string-array>
</resources>